--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
   <main id="aboutMe" class="background">
     <div class="pageContent">
       <h1>About Me</h1>
-      <p>WIP <br><a href="#contactPage" onclick="pageMove(3)">Contact</a></p>
+      <p>Work In Progress</p>
       <p>Name</p>
       <p>Age</p>
       <p>Live in</p>
+      <a href="#contactPage" onclick="pageMove(3)">Contact</a>
       <a class="toRight" href="#knowledgePage" onclick="pageMove(1)"></a>
       <a class="toBottom" href="#projectsPage" onclick="pageMove(2)"></a>
     </div>
