--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <p>Work In Progress</p>
       <p>Name</p>
       <p>Age</p>
-      <p>Live in</p>
+      <p>Live in MdC</p>
       <a href="#contactPage" onclick="pageMove(3)">Contact</a>
       <a class="toRight" href="#knowledgePage" onclick="pageMove(1)"></a>
       <a class="toBottom" href="#projectsPage" onclick="pageMove(2)"></a>
