--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <main id="aboutMe" class="background">
     <div class="pageContent">
-      <h1>About Me</h1>
+      <h1>About Me.</h1>
       <p>Work In Progress</p>
       <p>Name</p>
       <p>Age</p>
