--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
 
 <body>
 
+  <nav>
+    <a href="#aboutMe" onclick="pageMove(-actualPage)">About me</a>
+    <a href="#knowledgePage" onclick="pageMove(-actualPage + 1)">Applications</a>
+    <a href="#projectsPage" onclick="pageMove(- actualPage + 2)">Art</a>
+    <a href="#contactPage" onclick="pageMove(-actualPage + 3)">Contact</a>
+    </nav>
+
+
   <div id="config" onclick="configMenu()"></div>
 
   <div id="configMenu">
@@ -47,12 +55,14 @@
 
   <main id="aboutMe" class="background">
     <div class="pageContent">
-      <h1>About Me.....!</h1>
+      <div id="profilePic"><img  src="/img/profile.jpg"></div>
+      <div id="profileText">
       <p>Work In Progress</p>
-      <p>Name</p>
-      <p>Age</p>
-      <p>Live in MdC</p>
-      <a href="#contactPage" onclick="pageMove(3)">Contact</a>
+      <h1>About Me</h1>
+      <p>Name: Eric Gomes</p>
+      <p>Age: &nbsp&nbsp&nbsp29 Years</p>
+      <p>In: Mogi das Cruzes - SP</p>
+    </div>
       <a class="toRight" href="#knowledgePage" onclick="pageMove(1)"></a>
       <a class="toBottom" href="#projectsPage" onclick="pageMove(2)"></a>
     </div>
