--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
   <nav>
-    <a href="#aboutMe" onclick="pageMove(-actualPage)">About me</a>
+    <a href="#aboutMe" onclick="pageMove(-actualPage)" class="glowText">About me</a>
     <a href="#applicationsPage" onclick="pageMove(-actualPage + 1)">Applications</a>
     <a href="#designsPage" onclick="pageMove(- actualPage + 2)">Designs</a>
     <a href="#contactPage" onclick="pageMove(-actualPage + 3)">Contact</a>
