--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
   <div id="bottomMenu">
 
-    <button id="menuButton" onclick="menuSlider()">Menu</button>
+    <button id="menuButton" class="pointer" onclick="menuSlider()">Menu</button>
 
+    
     <p>Day Mode</p>
 
     <label class="switch">
@@ -67,8 +68,8 @@
         <p>Age: &nbsp &nbsp 29 Years</p>
         <p>In: &nbsp&nbsp &nbsp &nbsp &nbsp Mogi das Cruzes - SP</p>
       </div>
-      <a class="toRight" href="#applicationsPage" onclick="pageMove(1)"></a>
-      <a class="toBottom" href="#designsPage" onclick="pageMove(2)"></a>
+      <a class="toRight" onclick="pageMove(1)"></a>
+      <a class="toBottom" onclick="pageMove(2)"></a>
     </div>
   </main>
 
@@ -77,11 +78,11 @@
   <section id="applicationsPage" class="background">
     <div class="pageContent">
       <h1>Applications</h1>
-      <p>Applications goes here<br> <a href="https://cursos.alura.com.br/user/samekh"
-          target="_blank" rel="noreferrer noopener">Alura</a> and <a href="https://www.codecademy.com/profiles/iSamekh"
-          target="_blank" rel="noreferrer noopener">codeCademy</a>
-      <a class="toLeft" href="#aboutMe" onclick="pageMove(-1)"></a>
-      <a class="toBottom" href="#contactPage" onclick="pageMove(2)"></a>
+      <p>Applications goes here<br>
+      <a href="https://cursos.alura.com.br/user/samekh" target="_blank" rel="noreferrer noopener">Alura</a> and
+      <a href="https://www.codecademy.com/profiles/iSamekh" target="_blank" rel="noreferrer noopener">codeCademy</a>
+      <a class="toLeft" onclick="pageMove(-1)"></a>
+      <a class="toBottom" onclick="pageMove(2)"></a>
     </div>
   </section>
 
@@ -89,8 +90,8 @@
     <div class="pageContent">
       <h1>Designs</h1>
       <p>Designs goes here</p>
-      <a class="toTop" href="#aboutMe" onclick="pageMove(-2)"></a>
-      <a class="toRight" href="#contactPage" onclick="pageMove(1)"></a>
+      <a class="toTop" onclick="pageMove(-2)"></a>
+      <a class="toRight" onclick="pageMove(1)"></a>
     </div>
   </section>
 
@@ -99,8 +100,8 @@
       <h1>Contacts</h1>
       <p>Contacts goes here</p>
       <p>Hosted in <a href="https://github.com/iSamekh" target="_blank" rel="noreferrer noopener">github</a></p>
-      <a class="toTop" href="#applicationsPage" onclick="pageMove(-2)"></a>
-      <a class="toLeft" href="#designsPage" onclick="pageMove(-1)"></a>
+      <a class="toTop" onclick="pageMove(-2)"></a>
+      <a class="toLeft" onclick="pageMove(-1)"></a>
     </div>
   </section>
 </body>
