Variable name att

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </g>
   </svg>
 
-  <main id="aboutMe" class="background">
+  <main id="about" class="background">
     <div class="pageContent">
       <div id="profilePic"><img src="/img/profile.jpg"></div>
       <div id="profileText">
@@ -75,7 +75,7 @@
 
   <!-- https://www.freecodecamp.org/learn/2022/responsive-web-design/learn-html-by-building-a-cat-photo-app/step-8 -->
 
-  <section id="applicationsPage" class="background">
+  <section id="application" class="background">
     <div class="pageContent">
       <h1>Applications</h1>
       <p>Applications goes here<br>
@@ -86,7 +86,7 @@
     </div>
   </section>
 
-  <section id="designsPage" class="background">
+  <section id="design" class="background">
     <div class="pageContent">
       <h1>Designs</h1>
       <p>Designs goes here</p>
@@ -95,7 +95,7 @@
     </div>
   </section>
 
-  <section id="contactPage" class="background">
+  <section id="contact" class="background">
     <div class="pageContent">
       <h1>Contacts</h1>
       <p>Contacts goes here</p>
