--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="pageContent">
       
       <h1>Applications</h1>
-      <p>Applications goes here<br>
+      <p>Applications goes here:<a href="https://github.com/iSamekh/tetris" target="_blank">Tetris</a><br>
 
       <a class="toLeft" onclick="pageMove(-1)"></a>
       <a class="toBottom" onclick="pageMove(2)"></a>
