--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <h1>Applications</h1>
       <div id="applicationsDiv">
         <a href="https://www.samekh.dev/tetris/"><img height="150vmax" src="/img/tetris.png"></a><br>
-        <a href="http://www.samekh.com/pokermon/"><img height="150vmax%" src="/img/pokemon.png"></a>
+        <a href="https://www.samekh.dev/pokermon/"><img height="150vmax%" src="/img/pokemon.png"></a>
       </div>
 
       <a class="toLeft" onclick="pageMove(-1)"></a>
